--- a/new_css/kimjaeseob_m.css
+++ b/new_css/kimjaeseob_m.css
@@ -5,6 +5,7 @@
  * ============================== */
 
 .mt50 { margin-top:50px !important; }
+.pl15 { padding-left:15px !important; }
 
  #subTopWrap.noneType {height:112px;}
  #subTopWrap.noneType .subTopArea {border-bottom:0;}
@@ -19,6 +20,8 @@
 .tblEle > .ele.mini {text-align:right; width:10px; padding-left:10px; white-space:nowrap;}
 .tblEle > .ele .inpAlertMsg {padding-top:0;}
 .tblEle > .ele .ui_checkBox label {margin-right:0;}
+.tblEle.vtType > .ele {vertical-align:top;}
+
 
 button.btnType2.small, a.btnType2.small { min-width:140px; font-size:24px; line-height:58px; height:60px; padding:0 10px;}
 
@@ -49,6 +52,25 @@ button.btnType2.small, a.btnType2.small { min-width:140px; font-size:24px; line-
 .contTitEle {margin-top:42px; padding-bottom:21px;}
 .contTitEle .tit {display:inline-block; font-size:34px; color:#292a2d;}
 .contTitEle .subTxt {float:right; margin-top:14px; font-size:22px; color:#727476;}
+
+.agrCont {padding-top:40px;}
+.agrCont > li {position:relative; font-size:28px; color:#727476; /* text-indent:-28px; margin-left:28px; */}
+.agrCont > li + li {padding-top:31px; margin-top:33px; border-top:1px solid #e2e2e4;}
+.agrCont > li.ty1 {padding-left:30px;}
+.agrCont > li.ty1 .num {position:absolute; top:0; left:0;}
+.agrCont > li.ty1 + li.ty1 .num {top:31px;}
+.agrCont > li .tit {font-size:32px; color:#222;}
+
+.agtTxtCont {}
+.agtTxtCont > dt {font-size:32px; color:#222;}
+.agtTxtCont > dd {padding:3px 0 0 30px; font-size:28px; color:#727476;}
+
+.layerfullWrap {position:absolute; top:0; right:0; bottom:0; left:0; z-index:500; width:100%; height:100%; padding:130px 0 0 0; background:#fff;}
+.layerHeader {position:fixed; top:0; left:0; z-index:101; width:100%; background:#fff; text-align:center; box-shadow:0px 0px 20px -3px rgba(0,0,0,0.2)}
+.layerHeader > .layerTitle .inner {font-weight:500; font-size:36px; line-height:108px; color:#4e4f51;}
+.layerContent {position:relative; height:100%; min-height:100%; padding:0 30px 60px 30px; overflow:auto;}
+.layerContent > .layerInner {height:calc(100% - 20px); overflow:auto;}
+.layerCloseBtn {position:absolute; top:36px; right:32px; width:39px; height:38px; background:url(../new_images/common/btnCloseLayerPop.png) no-repeat; background-size:100%; text-indent:-9999px;}
 
 
 
